src/objects/SDHC_Note__c.object
<CustomObject>
    <description>A Custom Object for Notes that can account for Multiple Notes in a chronological order and can be queried.</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tableau Dashboard</fullName>
                </value>
                <value>
                    <fullName>Waterfall</fullName>
                </value>
                <value>
                    <fullName>Loan Information</fullName>
                </value>
                <value>
                    <fullName>SDHC Expense</fullName>
                </value>
                <value>
                    <fullName>Other 1</fullName>
                </value>
                <value>
                    <fullName>Other 2</fullName>
                </value>
                <value>
                    <fullName>Other 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Added__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Notes__c</fullName>
        <label>Project Notes</label>
        <referenceTo>Loan_Project__c</referenceTo>
        <relationshipLabel>SDHC Notes</relationshipLabel>
        <relationshipName>SDHC_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SDHC Note</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>SDHC Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDHC Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>